# cpp-iqa-lab

./: .gitignore  README.md
day1/: CMakeLists.txt
day1/src/: main.cpp
day2/: CMakeLists.txt
day2/src/: main.cpp
